--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <div>
       <button class="reset-button" onclick="resetGame()">Reset</button>
     </div>
+
+    <div class="result"></div>
     <script src="app.js"></script>
   </body>
 </html>
